RESOLVED FIXED17508
REGRESSION (r30535): mailto regression tests failing
https://bugs.webkit.org/show_bug.cgi?id=17508
Summary REGRESSION (r30535): mailto regression tests failing
Darin Adler
Reported 2008-02-23 23:48:10 PST
The mailto tests are failing, because of a small change I made to mailto handling that was incorrect. Will restore the old logic.
Attachments
patch (1.59 KB, patch)
2008-02-23 23:50 PST, Darin Adler
sam: review+
Darin Adler
Comment 1 2008-02-23 23:50:31 PST
Note You need to log in before you can comment on or make changes to this bug.