        Reviewed by Sam.

- fix http://bugs.webkit.org/show_bug.cgi?id=17508
          REGRESSION (r30535): mailto regression tests failing

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::submit): Restore the old logic, with its unpleasant
        trip through String do to the replace operation. It's inefficient, but there's
        no real reason to worry about the efficiency of mailto forms, since that feature
        is nearly obsolete.



Canonical link: https://commits.webkit.org/24258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30547 268f45cc-cd09-0410-ab3c-d52691b4dbfc